--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="search_title">NewSearch</string>
+    <string name="search_text">searcg</string>
+    <string name="search_hint">shint</string>
+    <string name="submit_text">ssubmit</string>
+    <string name="search_hine">Eg. bulbasaur</string>
+    <string name="search_texts">New Search</string>
+    <string name="submit_texts">Submit</string>
 </resources>
